fixed z-index so hover still works on modal

--- a/src/app/favorites/favorites.component.css
+++ b/src/app/favorites/favorites.component.css
@@ -56,7 +56,7 @@ img {
   height: fit-content;
   background-color: rgba(255, 160, 122, 0.9);
   position: absolute;
-  z-index: 1;
+  z-index: 5;
   border-radius: 15px;
   left: 50%;
   top: 50%;
